force-app/main/default/objects/Book__c/Book__c.object-meta.xml
<CustomObject>
    <description>Stores information about each book, including its title, authors, publisher, publication details, and categorization. It serves as the central repository of book-related data in the management system.</description>
    <label>Book</label>
    <nameField>
        <displayFormat>B-{0000}</displayFormat>
        <label>Book Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Books</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>