force-app/main/default/objects/Book__c/fields/Edition__c.field-meta.xml
<CustomField>
    <fullName>Edition__c</fullName>
    <label>Edition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1st Edition</fullName>
            </value>
            <value>
                <fullName>2nd Edition</fullName>
            </value>
            <value>
                <fullName>3rd Edition</fullName>
            </value>
            <value>
                <fullName>4th Edition</fullName>
            </value>
            <value>
                <fullName>5th Edition</fullName>
            </value>
            <value>
                <fullName>6th Edition</fullName>
            </value>
            <value>
                <fullName>Revised Edition</fullName>
            </value>
            <value>
                <fullName>Special Edition</fullName>
            </value>
            <value>
                <fullName>Collector&apos;s Edition</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>