force-app/main/default/objects/Book__c/fields/Genre__c.field-meta.xml
<CustomField>
    <fullName>Genre__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Genre of this book</description>
    <inlineHelpText>The Genre of this book</inlineHelpText>
    <label>Genre</label>
    <referenceTo>Genre__c</referenceTo>
    <relationshipLabel>Books</relationshipLabel>
    <relationshipName>Books</relationshipName>
    <type>Lookup</type>
</CustomField>