force-app/main/default/objects/Book__c/fields/ISBN__c.field-meta.xml
<CustomField>
    <fullName>ISBN__c</fullName>
    <description>The International Standard Book Number, which is a unique identifier for books.</description>
    <inlineHelpText>The International Standard Book Number, which is a unique identifier for books.</inlineHelpText>
    <label>ISBN</label>
    <length>17</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>