force-app/main/default/objects/Book__c/fields/PublicationDate__c.field-meta.xml
<CustomField>
    <fullName>PublicationDate__c</fullName>
    <description>The date the book was published</description>
    <inlineHelpText>The date the book was published</inlineHelpText>
    <label>Publication Date</label>
    <type>Date</type>
</CustomField>