force-app/main/default/objects/Book__c/fields/PublicationStatus__c.field-meta.xml
<CustomField>
    <fullName>PublicationStatus__c</fullName>
    <description>Track the book&apos;s status in the publication process</description>
    <inlineHelpText>Track the book&apos;s status in the publication process</inlineHelpText>
    <label>Publication Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Conceptualizing</fullName>
            </value>
            <value>
                <fullName>Writing</fullName>
            </value>
            <value>
                <fullName>Editing</fullName>
            </value>
            <value>
                <fullName>Printing</fullName>
            </value>
            <value>
                <fullName>Released</fullName>
            </value>
            <value>
                <fullName>Out of Print</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>