force-app/main/default/objects/Book__c/fields/Rating__c.field-meta.xml
<CustomField>
    <fullName>Rating__c</fullName>
    <description>The overall rating of this book.</description>
    <inlineHelpText>The overall rating of this book.</inlineHelpText>
    <label>Rating</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>